# buddy-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SPECIFICATION.md  claude.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: crunch.md
.claude/specs/: create-projects-worktrees.md  prompt-aggregation.md
.gitea/workflows/: test.yaml
config/: graphiti-config.yaml  mcp-config.json
src/buddy_bot/: __init__.py  bot.py  buffer.py  config.py  executor.py  graphiti.py  history.py  main.py  mcp_server.py  processor.py  progress.py  prompt.py  retry.py  speechkit.py  todo.py  typing_indicator.py
src/buddy_bot/tools/: calendar.py  email.py  google_auth.py  memory.py  perplexity.py  registry.py  search.py  time.py  todo.py
tests/: test_bot.py  test_buffer.py  test_config.py  test_docker.py  test_executor.py  test_graphiti.py  test_history.py  test_integration.py  test_main.py  test_mcp_server.py  test_processor.py  test_progress.py  test_prompt.py  test_retry.py  test_speechkit.py  test_todo.py  test_typing_indicator.py  test_voice.py
tests/test_tools/: test_calendar.py  test_email.py  test_google_auth.py  test_memory.py  test_perplexity.py  test_registry.py  test_search.py  test_time.py  test_todo.py
