[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-bot"
version = "0.1.0"
description = "Telegram Personal Assistant with temporal memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[webhooks]>=21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "mcp>=1.0.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
